# generacion_paquetesPoetry

T_converter_na/: README.md  pyproject.toml
T_converter_na/t_converter_na/: convertions.py
T_converter_na/tests/: test_t_converter_na.py
